<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Activity.LogInActivity"
    android:background="#FAFAFA"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_imageView"
                android:layout_width="91dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:background="@drawable/logo1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/log_in"
                android:textColor="@color/black"
                android:textSize="24sp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25dp"
                android:elevation="7dp"
                app:cardCornerRadius="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#707070" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:elevation="7dp"
                app:cardCornerRadius="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/password"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:textColorHint="#707070" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/forgot_password_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="15dp"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/forget_password"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <Button
                android:id="@+id/login_myAccount_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/buttom"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/login_account"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="72dp"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/dont_have_account"
                    android:textColor="#707070"
                    android:textSize="14dp" />

                <LinearLayout
                    android:id="@+id/registerNow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="5dp"
                        android:text="@string/register_now"
                        android:textColor="#D71E3D"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/skip_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="30dp"
                android:layout_marginRight="46dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>