<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        android:orientation="vertical"
        tools:context="Activity.LogInActivity">


        <ImageView
            android:layout_width="91dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:layout_marginTop="86dp"
            android:background="@drawable/logo1" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="51dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:elevation="7dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/et_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:hint="@string/first_name"
                    android:inputType="textShortMessage"
                    android:fontFamily="@font/roboto_light"
                    android:lines="1"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#707070" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="26dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:elevation="7dp"
                app:cardCornerRadius="20dp">

                <EditText
                    android:id="@+id/et_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FAFAFA"
                    android:hint="@string/last_name"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="textShortMessage"
                    android:lines="1"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#707070" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:elevation="7dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/et_emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="#707070" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:elevation="7dp"
            app:cardCornerRadius="20dp">

            <EditText
                android:id="@+id/et_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/phone_number"
                android:inputType="phone"

                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="#707070" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:elevation="7dp"
            app:cardCornerRadius="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/password"
                android:padding="15dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="#707070" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:elevation="7dp"
            app:cardCornerRadius="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_conformPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/conform_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="#707070" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/by_signing_up"
                android:textColor="#707070"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/terms_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingLeft="5dp"
                android:text="@string/terms_conditions"
                android:textColor="#D71E3D"
                android:textSize="14dp" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/buttom"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="0.75dp"
                android:layout_marginLeft="38.5dp"
                android:layout_marginTop="25dp"
                android:background="#707070" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="14dp"
                android:layout_marginRight="15dp"
                android:text="@string/or"
                android:textColor="#707070"
                android:textSize="14dp" />

            <View
                android:layout_width="130dp"
                android:layout_height="0.75dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="37.5dp"
                android:background="#707070" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/signup_social"
            android:textColor="#000000"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="7.59dp"
                android:layout_height="16dp"
                android:layout_marginLeft="158dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/facebook" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="14dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="157.73dp"
                android:background="@drawable/twitter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="0.75dp"
                android:layout_marginLeft="38.5dp"
                android:layout_marginTop="32dp"
                android:background="#707070" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20.56dp"
                android:layout_marginRight="15dp"
                android:text="@string/or"
                android:textColor="#707070"
                android:textSize="14dp" />

            <View
                android:layout_width="130dp"
                android:layout_height="0.75dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="37.5dp"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="41dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/already_account"
                android:textColor="#707070"
                android:textSize="17dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:paddingLeft="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sign_in_now"
                android:textColor="#D71E3D"
                android:textSize="17dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
